modifier path database

--- a/auchanNetoye.ipynb
+++ b/auchanNetoye.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,7 @@
     "import pandas as pd\n",
     "from datetime import date\n",
     "\n",
-    "month = '4'\n",
+    "month = '2'\n",
     "today = date.today()\n",
     "year = today.year\n",
     "\n",
@@ -25,16 +25,18 @@
     "\n",
     "    dfProduits = pd.read_csv(f'/Users/minh/Desktop/Comparator/Scrap/Data_base/{year}/{month}/{department}/{city}/{nom_drive}/{dateScraped}/{supermarket}_produits.csv')\n",
     "    # 1\n",
-    "   \n",
+    "    dfProduits['rayon_principal'] = dfProduits['rayon_principal'].replace('Fruits légumes', 'Fruits, légumes')\n",
     "    #2\n",
-    "    dfProduits['rayon_principal'] = dfProduits['rayon_principal'].replace('Boucherie, volaille, poissonnerie', 'Viandes, poissons')\n",
+    "    dfProduits['rayon_principal'] = dfProduits['rayon_principal'].replace('Boucherie volaille poissonnerie', 'Viandes, poissons')\n",
     "    dfProduits.loc[(dfProduits['rayon_principal'] == 'Marché frais') & (dfProduits['rayon_secondaire'] == 'La boucherie à la coupe'), 'rayon_principal'] = 'Viandes, poissons'\n",
     "    #3\n",
-    "    dfProduits['rayon_principal'] = dfProduits['rayon_principal'].replace('Charcuterie, traiteur', 'Charcuterie, traiteur')\n",
-    "    dfProduits.loc[(dfProduits['rayon_principal'] == 'Marché frais') & (dfProduits['rayon_secondaire'] == 'Le traiteur, la rôtisserie'), 'rayon_principal'] = 'Charcuterie, traiteur'\n",
+    "    dfProduits['rayon_principal'] = dfProduits['rayon_principal'].replace('Charcuterie traiteur pain', 'Charcuterie, traiteur')\n",
+    "    dfProduits.loc[(dfProduits['rayon_principal'] == 'Marché frais') & (dfProduits['rayon_secondaire'] == 'Le traiteur la rôtisserie'), 'rayon_principal'] = 'Charcuterie, traiteur'\n",
     "    #4\n",
-    "    dfProduits.loc[(dfProduits['rayon_principal'] == 'Marché frais') & (dfProduits['rayon_secondaire'] == 'La boulangerie, pâtisserie'), 'rayon_principal'] = 'Pain, pâtisserie'\n",
+    "    dfProduits.loc[(dfProduits['rayon_principal'] == 'Marché frais') & (dfProduits['rayon_secondaire'] == 'La boulangerie pâtisserie'), 'rayon_principal'] = 'Pain, pâtisserie'\n",
     "    #5\n",
+    "    dfProduits['rayon_principal'] = dfProduits['rayon_principal'].replace('Produits laitiers oeufs fromages', 'Produits laitiers, oeufs, fromages')\n",
+    "    #6\n",
     "    dfProduits['rayon_principal'] = dfProduits['rayon_principal'].replace('Bio et écologique', 'Bio')\n",
     "    #7\n",
     "    #8\n",
@@ -42,23 +44,24 @@
     "    #9\n",
     "    dfProduits['rayon_principal'] = dfProduits['rayon_principal'].replace('Epicerie salée', 'Épicerie salée')\n",
     "    #10\n",
-    "    dfProduits['rayon_principal'] = dfProduits['rayon_principal'].replace('Eaux, jus, soda, thés glacés', 'Boissons')\n",
-    "    dfProduits['rayon_principal'] = dfProduits['rayon_principal'].replace('Vins, bières, alcools', 'Boissons')\n",
+    "    dfProduits['rayon_principal'] = dfProduits['rayon_principal'].replace('Eaux jus soda thés glacés', 'Boissons')\n",
+    "    dfProduits['rayon_principal'] = dfProduits['rayon_principal'].replace('Vins bières alcools', 'Boissons')\n",
     "    #11\n",
     "    dfProduits['rayon_principal'] = dfProduits['rayon_principal'].replace('Produits du monde et de nos régions', 'Produits du monde')\n",
-    "    dfProduits.loc[(dfProduits['rayon_principal'] == 'Épicerie salée') & (dfProduits['rayon_secondaire'] == 'Plats cuisinés, produits du monde'), 'rayon_principal'] = 'Produits du monde'\n",
+    "    dfProduits.loc[(dfProduits['rayon_principal'] == 'Épicerie salée') & (dfProduits['rayon_secondaire'] == 'Plats cuisinés produits du monde'), 'rayon_principal'] = 'Produits du monde'\n",
     "    #12\n",
     "    dfProduits['rayon_principal'] = dfProduits['rayon_principal'].replace('Régimes alimentaires et nutrition', 'Nutrition, végétale')\n",
     "    #13\n",
     "    dfProduits['rayon_principal'] = dfProduits['rayon_principal'].replace('Tout pour bébé', 'Bébé')\n",
     "    #14\n",
+    "    dfProduits['rayon_principal'] = dfProduits['rayon_principal'].replace('Hygiène beauté', 'Hygiène, beauté')\n",
     "    #15\n",
-    "    dfProduits['rayon_principal'] = dfProduits['rayon_principal'].replace('Entretien, accessoires de la maison', 'Entretien, nettoyage')\n",
+    "    dfProduits['rayon_principal'] = dfProduits['rayon_principal'].replace('Entretien accessoires de la maison', 'Entretien, nettoyage')\n",
     "    #16\n",
     "    dfProduits['rayon_principal'] = dfProduits['rayon_principal'].replace('Animalerie', 'Animal')\n",
     "\n",
     "    # Save the modified DataFrame (optional)\n",
-    "    dfProduits.to_csv(f'/Users/minh/Desktop/Comparator/Scrap/Data_base/{year}/{month}/{department}/{city}/{nom_drive}/{dateScraped}/{supermarket}_produitsNetoye.csv', index=False)  # Adjust path as needed\n",
+    "    dfProduits.to_csv(f'/Users/minh/Desktop/Comparator/Scrap/Data_base/{year}/{month}/{department}/{city}/{nom_drive}/{dateScraped}/{supermarket}_produits.csv', index=False)  # Adjust path as needed\n",
     "\n"
    ]
   }
