--- a/carrefourNetoye.ipynb
+++ b/carrefourNetoye.ipynb
@@ -10,7 +10,7 @@
     "import pandas as pd\n",
     "from datetime import date\n",
     "\n",
-    "month = '4'\n",
+    "month = '2'\n",
     "today = date.today()\n",
     "year = today.year\n",
     "\n",
@@ -64,7 +64,7 @@
     "    dfProduits['rayon_principal'] = dfProduits['rayon_principal'].replace('Animalerie', 'Animal')\n",
     "\n",
     "    # Save the modified DataFrame (optional)\n",
-    "    dfProduits.to_csv(f'/Users/minh/Desktop/Comparator/Scrap/Data_base/{year}/{month}/{department}/{city}/{nom_drive}/{dateScraped}/{supermarket}_produitsNetoye.csv', index=False)  # Adjust path as needed\n",
+    "    dfProduits.to_csv(f'/Users/minh/Desktop/Comparator/Scrap/Data_base/{year}/{month}/{department}/{city}/{nom_drive}/{dateScraped}/{supermarket}_produits.csv', index=False)  # Adjust path as needed\n",
     "\n"
    ]
   }
